- Added parent window parameter to wxHelpController constructor
  and added SetParentWindow/GetParentWindow.
- wxMultiChoiceDialog uses now wxCheckListBox if possible, wxListBox if not.
- Added wxBitmapButton::SetHoverBitmap()
- Access to titles through Get/SetTitle is available now only for top level
  windows (wxDialog, wxFrame).
- Fixed memory leak of pending events in wxEvtHandler

wxMSW:

- wxFileDialog respects absence of wxCHANGE_DIR flag under NT (Brad Anderson).
- Switching page of a hidden notebook doesn't lose focus (Jamie Gadd).
- Removed wxImageList *GetImageList(int) const.

wxGTK:

- Fixed problem with choice editor in wxGrid whereby the editor
  lost focus when the combobox menu was shown.

wxMac:

- Fixed problem with clipboard support for custom data flavors.

wxWinCE:

- Pressing build-in joystick on WinCE phones fires wxEVT_JOY_BUTTON_DOWN event.
- Native wxCheckListBox implementation.
- All wxTopLevelWindows resizes accordingly to SIP visibility.
- ::wxGetUserName() implemented.

Unix:

- NO_GCC_PRAGMA is not used any more, remove checks for it if you used it.


2.6.2
-----

All:

- Fixed wxScopeGuard to work with VC++, documented it.
- Fixed proxy handling in wxURL.
- Added wxEVT_MEDIA_LOADED event for wxMediaCtrl.
- Added new methods to wxMediaCtrl (wxURI version of Load, ShowPlayerControls).
- Added wxZipFSHandler::Cleanup() (Stas Sergeev).
- Added wxImage::RotateHue() and RGB <-> HSV conversions (John Anderson).
- Fixed compilation with IBM xlC compiler.
- wxABI_VERSION, see 'Backward Compatibility' topic overview in the manual.
- Added wxLongLong::ToDouble().
- Added wxDateTime::[Make]FromTimezone(), fixed several TZ-related bugs.
- Fixed bug in wxStreamBuffer::Read(wxStreamBuffer *) (Paul Cornett).
- Fixed wxListbook and wxChoicebook internal layout.

All (GUI):

- Added wxStaticText::Wrap()
- wxChoice and wxComboBox::GetSelection() now returns completed selection,
  added a new GetCurrentSelection() function having the old behaviour.